Commit of first modification on proj stat collectif

--- a/ApprStat_groupe.ipynb
+++ b/ApprStat_groupe.ipynb
@@ -3,9 +3,504 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Statistical Learning Project"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\"\"\"IMPORT OF PCK\"\"\"\n",
+    "\n",
+    "import os\n",
+    "import glob\n",
+    "import tqdm\n",
+    "import re\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set(color_codes=True)\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "import math\n",
+    "import scipy.signal as signal\n",
+    "import random\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from IPython.core.display import display, HTML #display(HTML(data.to_html())) to show all variables"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\"\"\"DIRECTORY\"\"\"\n",
+    "os.getcwd()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1/ Import of data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data_folder = Path(r\"C:\\Users\\ville\\PycharmProjects\\stat_projetcs\\Appr_Stat\\data\\Books_Dataset_20210108\\archive\")\n",
+    "bestsellers = data_folder / \"bestsellers_with_categories.csv\"\n",
+    "dta = pd.read_csv(bestsellers)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2/ Data Wrangling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Corrections for modelisation steps\n",
+    "\n",
+    "dta[\"Genre\"] = dta.Genre.replace(to_replace=['Fiction', 'Non Fiction'], value=[0, 1])\n",
+    "dta = dta.rename(columns={\"User Rating\": \"Rating\"})\n",
+    "dta.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(dta.head(5))\n",
+    "print(dta.tail(5))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>\n",
+    "<b>\n",
+    "\n",
+    "We can see from the tail of our dataset that there are the same book, a multiple time.\n",
+    "\n",
+    "The only difference is the year, in term of features. We can imagine that it represent the year when the book pop_up or the year when it becomes a bestsellers.\n",
+    "After a quick verification on internet, we can see that it represents: The year when the book was past of bestsellings.\n",
+    "Lets create a feature representing the time the book had been a bestsellings.\n",
+    "\n",
+    "In the next steps, we will treat this problematic."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## -- Cleaning of Name column\n",
+    "Due to case sensitivity, the same book, with a different writing, can be misinterpreted to a different one.\n",
+    "We can correct this errors of case sensitivity by putting all the name in upper case."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta[\"Name\"] = dta[\"Name\"].str.upper()\n",
+    "#problem solved"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## -- Cleaning of Author column\n",
+    "\n",
+    "We identified some difference for the reference of some authors, such as J.K Rowling. To fix this error, we smooth out the author name to J.K Rowling (without space between \".\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#To correct the space problem for few authors\n",
+    "for index, value in dta[\"Author\"].items():\n",
+    "    if value.startswith(\"J.\"):\n",
+    "        change = value.replace(\" \",\"\")\n",
+    "        dta.loc[index, \"Author\"] = change\n",
+    "    else:\n",
+    "        pass\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Creation of a new column which corresponds to the sum of year being best-sellings in total for the previous ten years.\n",
+    "Next we show the graph corresponding"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta[\"sum_best\"]=\"\"\n",
+    "dta[\"sum_best\"] = dta.groupby(\"Name\").transform('count')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,6))\n",
+    "\n",
+    "ax = sns.countplot(data=dta, x=dta.Name.value_counts(), palette=\"Set2\");\n",
+    "\n",
+    "for p in ax.patches:\n",
+    "    ax.annotate(format(p.get_height(), 'd'),\n",
+    "                   (p.get_x() + p.get_width() / 2., p.get_height()),\n",
+    "                   ha = 'center', va = 'center',\n",
+    "                   xytext = (0, 9),\n",
+    "                   textcoords = 'offset points')\n",
+    "\n",
+    "ax.set(xlabel=\"Appearances\", ylabel=\"Count\");\n",
+    "ax.set_title(\"Times a Title Shows up on Top 50 Charts (2009-2019)\");\n",
+    "plt.show();"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta_repeat = pd.DataFrame([x, y] for x, y in dta.Author.value_counts().iteritems() if (y > 1))\n",
+    "dta_repeat.columns = ['Author','Top 50 Appearances']\n",
+    "dta_repeat.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% #steps for futher analysis\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,6))\n",
+    "\n",
+    "ax = sns.countplot(data=dta_repeat, x=\"Top 50 Appearances\", palette=\"Set2\");\n",
+    "\n",
+    "for p in ax.patches:\n",
+    "    ax.annotate('{:.1%}'.format(p.get_height()/len(dta_repeat)),\n",
+    "                   (p.get_x() + p.get_width() / 2., p.get_height()),\n",
+    "                   ha = 'center', va = 'center',\n",
+    "                   xytext = (0, 9),\n",
+    "                   textcoords = 'offset points')\n",
+    "\n",
+    "ax.set(xlabel=\"Appearances\", ylabel=\"Count\");\n",
+    "ax.set_title(\"Repeat Top 50 Appearances\");\n",
+    "plt.show();\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Looking for redundancy in the authors\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "\n",
+    "ax = sns.countplot(data=dta, x=dta.Author.value_counts(), palette=\"Set2\")\n",
+    "\n",
+    "for p in ax.patches:\n",
+    "    ax.annotate(format(p.get_height(), 'd'),\n",
+    "                   (p.get_x() + p.get_width() / 2., p.get_height()),\n",
+    "                   ha = 'center', va = 'center',\n",
+    "                   xytext = (0, 9),\n",
+    "                   textcoords = 'offset points')\n",
+    "\n",
+    "ax.set(xlabel=\"Appearances\", ylabel=\"Number of Authors\")\n",
+    "ax.set_title(\"Total Appearances in the Top 50 Charts\")\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## -- Basic statistics"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta.describe().transpose()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## -- Look for correlation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta.shape\n",
+    "\n",
+    "numerical = list(set(dta.columns) -\n",
+    "                 set(['Name','Author']))\n",
+    "corr_matrix = dta[numerical].corr()\n",
+    "\n",
+    "sns.heatmap(corr_matrix);\n",
+    "plt.xticks(rotation=45);\n",
+    "\n",
+    "print(corr_matrix)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "-- Add"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Give an information on the dataset with the cosidered \"best movies\", with minimum 3000 review\n",
+    "data_order = dta.groupby(['Name', 'Author', 'Genre'], as_index=False)[['Rating', 'Reviews']].mean()\n",
+    "data_order = data_order[data_order['Reviews']>3000]\n",
+    "data_order = data_order.sort_values('Rating', ascending=False).head(20)\n",
+    "data_order\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Use of weighted mean to attribute a review/rating which corresponds more to the reality field\n",
+    "\n",
+    "with W_mean = ( ( v / m+v) * R) (( m / m+v)*C)\n",
+    "\n",
+    "m = number of rating\n",
+    "\n",
+    "C = mean Review\n",
+    "\n",
+    "v= number of review\n",
+    "\n",
+    "R = average numb of rating\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Weighted rating\n",
+    "m = min(dta['Reviews'])\n",
+    "C = dta['Rating'].mean()\n",
+    "def weighted_rating(x, m=m, C=C):\n",
+    "    v = x['Reviews']\n",
+    "    R = x['Rating']\n",
+    "    return (v/(v+m) * R) + (m/(m+v) * C)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta['Weighted Rating'] = dta.apply(weighted_rating, axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta.groupby(['Name','Author','Genre'], as_index=False)[['Rating', 'Reviews', 'Weighted Rating']].mean().sort_values(by='Weighted Rating', ascending=False).head(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dta.shape\n",
+    "\n",
+    "numerical = list(set(dta.columns) -\n",
+    "                 set(['Name','Author']))\n",
+    "corr_matrix = dta[numerical].corr()\n",
+    "\n",
+    "sns.heatmap(corr_matrix);\n",
+    "plt.xticks(rotation=45);\n",
+    "\n",
+    "print(corr_matrix)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
